--- a/C01_observations.qmd
+++ b/C01_observations.qmd
@@ -25,7 +25,7 @@ As always, we start by running our setup function. Start RStudio/R, and relaod y
 
 ```{r source_setup, warning = FALSE}
 source("setup.R")
-SPECIES = "Mola mola"
+SPECIES = "Dermochelys coriacea"
 ```
 
 # Observations
@@ -70,7 +70,7 @@ checklist = obs |>
   slice(1) |>
   browse_obis()
 
-occurrence = obs |>
+occurrence = obs |>t
   filter(basisOfRecord == "Occurrence") |>
   slice(1) |>
   browse_obis()
